--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@digikare/nestjs-prom",
+  "name": "@redoppz/nestjs-prom-fork",
   "version": "1.0.0",
-  "description": "A promotheus module for nestjs",
+  "description": "Fork of promotheus module that supported new nestjs version",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -16,53 +16,51 @@
     "test:debug": "node --inspect-brk ./node_modules/.bin/ts-node tests/src/main.ts",
     "test:live": "ts-node tests/src/main.ts"
   },
-  "author": "Tieu-Philippe KHIM <pkhim@digikare.com>",
+  "author": "redoppz <tsezarfinger@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.3.2",
-    "@types/jest": "^26.0.7",
-    "@types/node": "^12.12.53",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^22.13.10",
     "@types/response-time": "^2.3.4",
-    "@types/supertest": "^2.0.10",
-    "jest": "^26.1.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.0",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.1.4",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.2.2",
     "ts-node": "^8.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.0.0 || ^7.0.0",
-    "@nestjs/core": "^6.0.0 || ^7.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0"
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.2"
   },
   "dependencies": {
-    "@nestjs/testing": "^7.3.2",
+    "@nestjs/testing": "^10.4.5",
     "prom-client": "^12.0.0",
     "response-time": "^2.3.2",
     "url-value-parser": "^2.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digikare/nestjs-prom.git"
+    "url": "https://github.com/redoppz/nestjs-prom"
   },
   "keywords": [
     "nestjs",
-    "promotheus"
+    "promotheus",
+    "fork"
   ],
   "bugs": {
-    "url": "https://github.com/digikare/nestjs-prom/issues"
+    "url": "https://github.com/redoppz/nestjs-prom/issues"
   },
-  "homepage": "https://github.com/digikare/nestjs-prom#readme",
+  "homepage": "https://github.com/redoppz/nestjs-prom#readme",
   "contributors": [
-    "Michael Yankelev @FSM1",
-    "Ashleigh Simonelli @bashleigh",
-    "@blackkopcap",
-    "@litichevskiydv"
+    "Tieu-Philippe KHIM <pkhim@digikare.com>"
   ],
   "publishConfig": {
     "tag": "next"
